# cc_test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements-serve.txt
.github/workflows/: ci.yml
configs/: train_config.yaml
src/: export_onnx.py
src/data/: __init__.py  dataset.py  simcse_dataset.py
src/inference/: __init__.py  predict.py
src/models/: __init__.py  classifier.py  simcse.py
src/serving/: app.py
src/training/: __init__.py  simcse_loss.py  train.py  train_simcse.py  trainer.py
tests/: test_dataset.py  test_model.py  test_training.py
