[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-test"
version = "0.1.0"
description = "Text classification project using BERT and HuggingFace Trainer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "pandas",
    "scikit-learn",
    "tqdm",
    "pyyaml",
    "tensorboard",
    "accelerate>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
